# stickut

./: .gitlab-ci.yml  .versionrc.json  CHANGELOG.md  GITHUB_RELEASES.md  package.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/workflows/: workflow-registry.json
backend/: pyproject.toml
backend/app/: main.py  runtime_config.py
backend/app/cutout/: cache.py  detector.py
backend/app/progress/: pubsub.py  queue.py
backend/app/routes/: config.py
backend/app/utils/: images.py
docker/: DOCKERHUB.md
docs/: configuration.md
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AdvancedPanel.tsx  FrameSelector.tsx  SearchPanel.tsx  UploadedStrip.tsx  ZoomModal.tsx
frontend/src/lib/: filename.ts
frontend/src/store/: useStore.ts
frontend/src/styles/: index.css
scripts/: install.sh  push.js  release.js
specs/001-v1-stickers-pipeline/: quickstart.md
sticut/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
sticut/.specify/: init-options.json
sticut/.specify/integrations/: claude.manifest.json  speckit.manifest.json
sticut/.specify/memory/: constitution.md
sticut/backend/: pyproject.toml
sticut/backend/app/: __init__.py  (+4 more)
sticut/docker/: download-models.py
sticut/docs/: docker.md  installation.md
sticut/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
sticut/scripts/: dev.sh  push.js  release.js  version-updater.js
(+46 files in other folders)
