[project]
name = "stickut-backend"
version = "1.1.2"
description = "Stickut V1 backend — A4 sticker sheet generator for Cricut Print Then Cut"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.36",
    "rembg[cpu]>=2.0.59,<3.0",
    "onnxruntime>=1.18,<2.0",
    "pillow>=10.4,<12.0",
    "pillow-heif>=0.18,<1.0",
    "pillow-avif-plugin>=1.4,<2.0",
    "lxml>=5.3,<7.0",
    "diskcache>=5.6,<6.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "python-multipart>=0.0.12,<0.1",
    "sse-starlette>=2.1,<3.0",
    "numpy>=1.26,<3.0",
    "httpx>=0.27,<1.0",
    "scipy>=1.11,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7,<1.0",
    "black>=24.10,<26.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
